--- a/SpringPrctice/SpingAnnotationEx/pom.xml
+++ b/SpringPrctice/SpingAnnotationEx/pom.xml
@@ -27,5 +27,10 @@
           <artifactId>spring-context</artifactId>
           <version>6.2.10</version>
       </dependency>
+      <dependency>
+          <groupId>javax.annotation</groupId>
+          <artifactId>javax.annotation-api</artifactId>
+          <version>1.2</version>
+      </dependency>
   </dependencies>
 </project>
